tests/sema/fail/v3_fail_loop_return.ep
# COMPILE_FAIL: function must return i64 on all paths

fun run(): i64 {
    for true {
        ret 1
    }
}

fun main(): void {
    exit(run())
}
